@@ -36,6 +36,7 @@ MovieJukebox 2.5 SNAPSHOT
  - Fixed defect #1950 sorttitle displays the basefile name
  - Fixed defect #1954 Only 1 actor read from NFO file
  - Fixed defect #1966 New Category always empty when watched scanner is disabled
+ - Fixed defect #1970 Movie index does not contain "other" categories
 
 MovieJukebox 2.4
 ----------------
